2002-09-16  Bruno Haible  <bruno@clisp.org>

	* emulparams/elf_i386_fbsd.sh: Set OUTPUT_FORMAT to
	elf32-i386-freebsd.
	* emulparams/elf64alpha_fbsd.sh: Set OUTPUT_FORMAT to
	elf64-alpha-freebsd.

2002-09-11  Nick Clifton  <nickc@redhat.com>

	* NEWS: New TI port supports both C4x and C3x series of DSPs.

	* po/tr.po: Updated Turkish translation.

2002-09-06  Jeffrey A Law  (law@redhat.com)

        * configure.tgt (h8300-*-hms*, h8500-*-hms*): Restore.

2002-09-02  Nick Clifton  <nickc@redhat.com>

	* scripttempl/v850.sc: Add EXTERN references to __ctbpm __gp and
	__ep.
	* emulparams/v850.sh (TEMPLATE_NAME): Define.

2002-08-30  Nick Clifton  <nickc@redhat.com>

	* scripttempl/elfd10v.sc (MEMORY): Remove UNIFIED, it is not
	used.  Change INSN to start at 0x01000000 and extend for
	256K (ignoring holes).  Start the STACK on a word aligned
	boundary.
        (.rodata): Start it at the READONLY_START_ADDR.

2002-08-30  Alan Modra  <amodra@bigpond.net.au>

	* emulparams/elf32ppc.sh (ARCH): Set to "powerpc:common".

2002-08-28  Svein E. Seldal  <Svein.Seldal@solidas.com>

	* Makefile.am: Add etic4xcoff.o in ALL_EMULATIONS list and
	added makefile targets for this file.
	* Makefile.in: Regenerate.
	* configure.tgt: Added tic4x-coff and c4x-coff emulations.
	* NEWS: Mention new port.

2002-08-28  Michael Hayes <m.hayes@elec.canterbury.ac.nz>

	* emulparams/tic3xcoff.sh: New file.
	* emulparams/tic4xcoff.sh: New file.
	* scripttempl/tic3xcoff.sc: New file.
	* scripttempl/tic4xcoff.sc: New file.

2002-08-28  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/aix.em (gld${EMULATION_NAME}_parse_args): Replace strtoll,
	strtoul and strtoull with bfd_scan_vma.
	(gld${EMULATION_NAME}_read_file): Likewise.

2002-08-28  Alan Modra  <amodra@bigpond.net.au>

	* configure.tgt: Remove h8[35]00-*-hms*.  Add h8500-*-rtems*.

2002-08-27  Egor Duda  <deo@logos-m.ru>

	* scripttempl/pe.sc: Handle .rdata_runtime_pseudo_reloc sections.
	Add symbols for application to access them.
